production/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: door
  labels:
    istio-injection: enabled
