production/home.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "home"
  namespace: "door"
  labels:
    app: "home"
spec:
  type: "NodePort"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
      #nodePort: 30080
  selector:
    app: "home"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "home"
  namespace: "door"
  labels:
    app: "home"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "home"
  template:
    metadata:
      labels:
        app: "home"
    spec:
      containers:
      - name: "home"
        image: "gcr.io/door-app-prod/home:4c71e22357d8c921a8457218cff574b1a40a051a"
        ports:
        - containerPort: 80
